--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.5",
     "react-type-animation": "^3.0.1",
     "tailwindcss": "^3.1.8"
   },
